<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IG PhotoWall</string>
    <string name="action_settings">Settings</string>
    <string name="livewallpaper_settings">Settings</string>
    <string name="livewallpaper_settings_title">Select test pattern</string>
    <string name="livewallpaper_settings_summary">		Choose which test pattern to display</string>
    <string name="livewallpaper_movement_title">Motion</string>
    <string name="livewallpaper_movement_summary">		Apply movement to test pattern</string>
    <string name="notice">Notice</string>
    <string name="no_image_mesage1">You need to Login </string>
    <string name="no_image_mesage2">with Instagram Account </string>
    <string name="no_image_mesage3">and grant permission in order to</string>
    <string name="no_image_mesage4">cache images. :D </string>
    <string name="wall_style_default">largeimg</string>

    <string-array name="wall_style">
        <item>Large images</item>
        <item>Small images</item>
    </string-array>
    <string-array name="wall_style_value">
        <item>largeimg</item>
        <item>smallimg</item>
    </string-array>
        <string name="wallpaper_name">IG Photo Wall</string>
        <string name="loading_igmedia">Loading images…</string>
        <string name="do_in_background">Run in background</string>
        <string name="getting_started">Getting started</string>
        <string name="login_with_instagram_desc">Login with Instagram offical website to grant permission</string>
        <string name="login_with_instagram">Login with Instagram</string>
        <string name="done">Done</string>
        <string name="feedback">Feedback</string>
        <string name="term_of_use_disclaimer">Disclaimer</string>
        <string name="term_of_use_content_h1">About</string>
        <string name="term_of_use_content_version">Version 1.</string>
        <string name="term_of_use_content_me">Daywong</string>
        <string name="term_of_use_content_email">Contact: daywong1119@gmail.com</string>
        <string name="term_of_use_content_c1">This product uses the Instagram API but is not endorsed or certified by Instagram.All photos copyright reserved to Instagram users.</string>
        

</resources>